# sispop-encoding

./: .drone.jsonnet  CMakeLists.txt  libsispopc.pc.in  readme.md
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
sispopc/: base32z.h  base64.h  bt_producer.h  bt_serialize.h  bt_value.h  byte_type.h  endian.h  hex.h  version.h.in
tests/: CMakeLists.txt  common.h  test_bt.cpp  test_encoding.cpp  test_endian.cpp
